Bug 361921 - configure sources not implemented for packagekit backend
Summary: configure sources not implemented for packagekit backend
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: PackageKit (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-04-18 04:34 UTC by Harald Sitter
Modified: 2016-04-19 13:10 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Harald Sitter 2016-04-18 04:34:14 UTC
'Configure Sources' where one would manage repository sources is currently not implemented for the packagekit backend but it should be, otherwise how am I suppose to add repos with randsomeware ;)

Reproducible: Always
Comment 1 Aleix Pol 2016-04-19 13:10:00 UTC
Git commit 7e2d851b9d5d2274f22a8578042aab52eadc36b0 by Aleix Pol.
Committed on 19/04/2016 at 13:09.
Pushed by apol into branch 'master'.

Implement PackageKit repositories as PackageKitBackend sources

M  +1    -0    libdiscover/backends/PackageKitBackend/CMakeLists.txt
M  +6    -0    libdiscover/backends/PackageKitBackend/PackageKitBackend.cpp
A  +103  -0    libdiscover/backends/PackageKitBackend/PackageKitSourcesBackend.cpp     [License: GPL (v2/3)]
A  +53   -0    libdiscover/backends/PackageKitBackend/PackageKitSourcesBackend.h     [License: GPL (v2/3)]

http://commits.kde.org/discover/7e2d851b9d5d2274f22a8578042aab52eadc36b0