Implement PackageKit repositories as PackageKitBackend sources

BUG: 361921